# source-code

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.release  Dockerfile.release.dockerignore  LICENSE  README.md  SECURITY.md  SKILL.md  scrub.example.yaml
.cargo/: config.toml
.github/workflows/: chart-e2e.yml  ci.yml  pages.yml  release.yml
charts/scrub/: .helmignore  Chart.yaml  values.yaml
charts/scrub/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  controller.yaml  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml  redis.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/scrub/templates/tests/: test-connection.yaml
crates/scrub/: Cargo.toml
crates/scrub-core/: Cargo.toml
crates/scrub-core/benches/: rehydrate.rs
crates/scrub-core/src/: config.rs  detect.rs  error.rs  lib.rs  mask.rs  ner.rs  rehydrate.rs  scan.rs  sentinel.rs  vault.rs
crates/scrub-core/tests/: common_rules.rs
crates/scrub/src/: audit.rs  connect.rs  crypto.rs  demo.rs  lib.rs  main.rs  mitm.rs  proxy.rs  redis_backend.rs  reload.rs  secrets.rs  session.rs  transactions.rs
crates/scrub/tests/: audit_e2e.rs  cluster_e2e.rs  connect_e2e.rs  dryrun_e2e.rs  failclosed_e2e.rs  intercept_e2e.rs  openai_stream_e2e.rs  policy_auth_e2e.rs  proxy_e2e.rs  redirect_e2e.rs  reload_e2e.rs  sentinel_auth_e2e.rs  session_e2e.rs  soak_e2e.rs  tenant_e2e.rs  tls_e2e.rs  transactions_e2e.rs  vault_source.rs
docs/: CONFIGURATION.md  DEPLOYMENT.md  HTTP-PROXY.md
examples/: common-rules.yaml  proxy.yaml
scripts/: build-release.sh  setup-ca.sh
website/: README.md  build.py  requirements.txt
website/assets/: app.js  mermaid-init.js  styles.css
website/content/guides/: getting-started.md  kubernetes.md  rules.md  why-scrub.md
