[workspace]
resolver = "2"
members = ["crates/scrub-core", "crates/scrub"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/scrub-dev/scrub"
rust-version = "1.85"

[workspace.dependencies]
scrub-core = { path = "crates/scrub-core" }
aho-corasick = "1.1"
regex-automata = "0.4"
memchr = "2.7"
bytes = "1.10"
zeroize = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
criterion = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
