[package]
name = "scrub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SCRUB engine: detection, masking, and streaming rehydration."

[dependencies]
aho-corasick = { workspace = true }
regex-automata = { workspace = true }
memchr = { workspace = true }
bytes = { workspace = true }
zeroize = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"
getrandom = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "rehydrate"
harness = false
